added styling to the button, hid the text input, added background coloring, and changed the picture sizing

--- a/objects-NASA/index.html
+++ b/objects-NASA/index.html
@@ -13,9 +13,12 @@
 	</head>
 	<body>
 
-		<h1>Pictures of the Stars</h1>
-		<input type="text" name="" value="">
-		<button type="button" name="button">artworks</button>
+		<h1>NASA photo of the day</h1>
+		<input type="hidden" type="text" name="" value="">
+		<button class="btn" type="button" name="button">
+			<div class ="hover"></div>
+			<span>Photo of the day</span>
+		</button>
 
 		<h2>Date</h2>
 		<img src="" alt="">
